fix overflow

--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@
 }
 
 .circles li:nth-child(10){
-    left: 85%;
+    left: 70%;
     width: 150px;
     height: 150px;
     animation-delay: 0s;
